--- a/index.html
+++ b/index.html
@@ -46,42 +46,78 @@
     <!-- ******** ABOUT US ******** -->
     <section class="grid-100 aboutUs">
       <div class="grid-container">
-        <div class="grid-60 suffix-40 about-content">
+        <div class="grid-55 suffix-45 about-content">
           <h2>About Us</h2>
-          <p>Agilant Solutions Inc. is North America’s leading independent provider of IT services, solutions, and technologies. As a visionary and innovator or next generation services, Agilant builds world-class IT solutions that fit the unique requirements of customers. Representing industry leading Open Source technologies and OEMs in the industry, Agilant rides on the cutting edge of the technology wave. That is, we know technology, where it’s been, and where it’s going.</p>
+          <p>Agilant Solutions Inc. is North America’s leading independent provider of IT services, solutions, and technologies. As a visionary and innovator of next generation services, Agilant builds world-class IT solutions that fit the unique requirements of customers. Representing industry leading Open Source technologies and OEMs in the industry, Agilant rides on the cutting edge of the technology wave. That is, we know technology, where it’s been, and where it’s going.</p>
         </div>
         <div class="grid-33 aboutInfo">
+          <div class="aboutIcon"><img src="images/map_icon.png" alt="Map Icon"></div>
           <div class="aboutNumber">600</div>
           <div class="aboutNumberText">staff on three continents</div>
         </div>
         <div class="grid-33 aboutInfo">
+          <div class="aboutIcon"><img src="images/talking_icon.png" alt="Talking Bubbles Icon"></div>
           <div class="aboutNumber">5,700</div>
           <div class="aboutNumberText">consulting engagements</div>
         </div>
         <div class="grid-33 aboutInfo">
+          <div class="aboutIcon"><img src="images/calendar_icon.png" alt="Calendar Icon"></div>
           <div class="aboutNumber">25</div>
-          <div class="aboutNumberText">years in industry</div>
+          <div class="aboutNumberText">years in the industry</div>
         </div>
       </div><!-- //.container-->
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <!-- ******** Our Solutions ******** -->
+    <section class="grid-100 ourSolutions">
+      <div class="grid-container">
+        <div class="grid-55 suffix-45">
+          <h2>Our Solutions</h2>
+        </div>
+        <div class="grid-33">
+
+         <h3>Healthcare Solutions</h3>
+         <p>Healthcare and Life Sciences clients are focusing a lot of attention on reducing costs and lorum ipsum efficiencies and automation. But simply adding technology is not enough. </p>
+       </div>
+       <div class="grid-33">
+          <h3>Healthcare Solutions</h3>
+         <p>Healthcare and Life Sciences clients are focusing a lot of attention on reducing costs and lorum ipsum efficiencies and automation. But simply adding technology is not enough. </p>
+       </div>
+       <div class="grid-33">
+          <h3>Healthcare Solutions</h3>
+         <p>Healthcare and Life Sciences clients are focusing a lot of attention on reducing costs and lorum ipsum efficiencies and automation. But simply adding technology is not enough. </p>
+       </div>
+       <div class="grid-33">
+          <h3>Healthcare Solutions</h3>
+         <p>Healthcare and Life Sciences clients are focusing a lot of attention on reducing costs and lorum ipsum efficiencies and automation. But simply adding technology is not enough. </p>
+       </div>
+       <div class="grid-33">
+          <h3>Healthcare Solutions</h3>
+         <p>Healthcare and Life Sciences clients are focusing a lot of attention on reducing costs and lorum ipsum efficiencies and automation. But simply adding technology is not enough. </p>
+       </div>
+       <div class="grid-33">
+          <h3>Healthcare Solutions</h3>
+         <p>Healthcare and Life Sciences clients are focusing a lot of attention on reducing costs and lorum ipsum efficiencies and automation. But simply adding technology is not enough. </p>
+       </div>
+     </div><!-- //.container-->
+   </section>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
 
 
-    <!-- ******** END OF  ******** -->
+   <!-- ******** END OF  ******** -->
 
-    <!-- ********  ******** -->
+   <!-- ********  ******** -->
 
-    <!-- ******** END OF  ******** -->
+   <!-- ******** END OF  ******** -->
 
-  </div><!-- //#wrapper -->
-  <script src="javascripts/jquery-2.1.3.min.js"></script>
-  <script src="javascripts/grid.js"></script>
+ </div><!-- //#wrapper -->
+ <script src="javascripts/jquery-2.1.3.min.js"></script>
+ <script src="javascripts/grid.js"></script>
 </body>
 </html>
