our solutions section and icons

--- a/index.html
+++ b/index.html
@@ -73,51 +73,88 @@
         <div class="grid-55 suffix-45">
           <h2>Our Solutions</h2>
         </div>
-        <div class="grid-33">
-
-         <h3>Healthcare Solutions</h3>
-         <p>Healthcare and Life Sciences clients are focusing a lot of attention on reducing costs and lorum ipsum efficiencies and automation. But simply adding technology is not enough. </p>
-       </div>
-       <div class="grid-33">
+        <div class="grid-33 solution-box">
+          <div class="solutionIcon">
+            <img src="images/healthcare.png" alt="Healthcare Icon">
+          </div>
+          <div class="design_border">
+            <img src="images/design_border.png" alt="Border Design">
+          </div>
           <h3>Healthcare Solutions</h3>
-         <p>Healthcare and Life Sciences clients are focusing a lot of attention on reducing costs and lorum ipsum efficiencies and automation. But simply adding technology is not enough. </p>
-       </div>
-       <div class="grid-33">
-          <h3>Healthcare Solutions</h3>
-         <p>Healthcare and Life Sciences clients are focusing a lot of attention on reducing costs and lorum ipsum efficiencies and automation. But simply adding technology is not enough. </p>
-       </div>
-       <div class="grid-33">
-          <h3>Healthcare Solutions</h3>
-         <p>Healthcare and Life Sciences clients are focusing a lot of attention on reducing costs and lorum ipsum efficiencies and automation. But simply adding technology is not enough. </p>
-       </div>
-       <div class="grid-33">
-          <h3>Healthcare Solutions</h3>
-         <p>Healthcare and Life Sciences clients are focusing a lot of attention on reducing costs and lorum ipsum efficiencies and automation. But simply adding technology is not enough. </p>
-       </div>
-       <div class="grid-33">
-          <h3>Healthcare Solutions</h3>
-         <p>Healthcare and Life Sciences clients are focusing a lot of attention on reducing costs and lorum ipsum efficiencies and automation. But simply adding technology is not enough. </p>
-       </div>
-     </div><!-- //.container-->
-   </section>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
+          <p>Healthcare and Life Sciences clients are focusing a lot of attention on reducing costs and lorum ipsum efficiencies and automation. But simply adding technology is not enough. </p>
+        </div>
+        <div class="grid-33 solution-box">
+          <div class="solutionIcon">
+            <img src="images/cloud.png" alt="Healthcare Icon">
+          </div>
+          <div class="design_border">
+            <img src="images/design_border.png" alt="Border Design">
+          </div>
+          <h3>Cloud Services</h3>
+          <p>Agilant helps you understand all aspects of the cloud models, facilitate your progression from traditional models to fast track cloud implementations with packaged solutions.  </p>
+        </div>
+        <div class="grid-33 solution-box">
+          <div class="solutionIcon">
+            <img src="images/security.png" alt="Healthcare Icon">
+          </div>
+          <div class="design_border">
+            <img src="images/design_border.png" alt="Border Design">
+          </div>
+          <h3>Security Services</h3>
+          <p>Today's threat landscape is constantly changing. Agilant's security practice is there to prepare customers, protect them and respond effectively.</p>
+        </div>
+        <div class="clear"></div>
+        <br/>
+        <div class="grid-33 solution-box">
+          <div class="solutionIcon">
+            <img src="images/managed-it.png" alt="Healthcare Icon">
+          </div>
+          <div class="design_border">
+            <img src="images/design_border.png" alt="Border Design">
+          </div>
+          <h3>Managed IT Services</h3>
+          <p>Agilant managed print solutions to reduce operating costs, improve productivity, increase security and transform workflows.</p>
+        </div>
+        <div class="grid-33 solution-box">
+          <div class="solutionIcon">
+            <img src="images/professional.png" alt="Healthcare Icon">
+          </div>
+          <div class="design_border">
+            <img src="images/design_border.png" alt="Border Design">
+          </div>
+          <h3>Professional Services</h3>
+          <p>Managing data is major challenge. The growth of email volumes, and unstructured file data has been exponential. Energy costs and financial can weigh heavily on an organization and affect overall performance.</p>
+        </div>
+        <div class="grid-33 solution-box">
+          <div class="solutionIcon">
+            <img src="images/infrastructure.png" alt="Healthcare Icon">
+          </div>
+          <div class="design_border">
+            <img src="images/design_border.png" alt="Border Design">
+          </div>
+          <h3>Infrastructure Services</h3>
+          <p>Through collaborative, long-term relationships, we assist the leading real estate firms of all sizes and geographically makeup to achieve and sustain measurable results built on a solid IT foundation.</p>
+        </div>
+      </div><!-- //.container-->
+    </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
 
-   <!-- ******** END OF  ******** -->
+    <!-- ******** END OF  ******** -->
 
-   <!-- ********  ******** -->
+    <!-- ********  ******** -->
 
-   <!-- ******** END OF  ******** -->
+    <!-- ******** END OF  ******** -->
 
- </div><!-- //#wrapper -->
- <script src="javascripts/jquery-2.1.3.min.js"></script>
- <script src="javascripts/grid.js"></script>
+  </div><!-- //#wrapper -->
+  <script src="javascripts/jquery-2.1.3.min.js"></script>
+  <script src="javascripts/grid.js"></script>
 </body>
 </html>
