--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div class="grid-33 solution-box">
           <div class="solutionIcon">
-            <img src="images/cloud.png" alt="Healthcare Icon">
+            <img src="images/cloud.png" alt="Cloud Icon">
           </div>
           <div class="design_border">
             <img src="images/design_border.png" alt="Border Design">
@@ -95,7 +95,7 @@
         </div>
         <div class="grid-33 solution-box">
           <div class="solutionIcon">
-            <img src="images/security.png" alt="Healthcare Icon">
+            <img src="images/security.png" alt="Security Icon">
           </div>
           <div class="design_border">
             <img src="images/design_border.png" alt="Border Design">
@@ -107,7 +107,7 @@
         <br/>
         <div class="grid-33 solution-box">
           <div class="solutionIcon">
-            <img src="images/managed-it.png" alt="Healthcare Icon">
+            <img src="images/managed-it.png" alt="Managed IT Icon">
           </div>
           <div class="design_border">
             <img src="images/design_border.png" alt="Border Design">
@@ -117,7 +117,7 @@
         </div>
         <div class="grid-33 solution-box">
           <div class="solutionIcon">
-            <img src="images/professional.png" alt="Healthcare Icon">
+            <img src="images/professional.png" alt="Professional Services Icon">
           </div>
           <div class="design_border">
             <img src="images/design_border.png" alt="Border Design">
@@ -127,13 +127,83 @@
         </div>
         <div class="grid-33 solution-box">
           <div class="solutionIcon">
-            <img src="images/infrastructure.png" alt="Healthcare Icon">
+            <img src="images/infrastructure.png" alt="Infrastructure Services Icon">
           </div>
           <div class="design_border">
             <img src="images/design_border.png" alt="Border Design">
           </div>
           <h3>Infrastructure Services</h3>
           <p>Through collaborative, long-term relationships, we assist the leading real estate firms of all sizes and geographically makeup to achieve and sustain measurable results built on a solid IT foundation.</p>
+        </div>
+      </div><!-- //.container-->
+    </section>
+    <!-- ******** The Verticals ******** -->
+    <section class="grid-100 ourVerticals">
+      <div class="grid-container">
+        <div class="grid-55 suffix-45">
+          <h2>The Verticals</h2>
+        </div>
+        <div class="grid-33 vertical-box">
+          <div class="verticalIcon">
+            <img src="images/life-sciences.png" alt="Life Sciences Icon">
+          </div>
+          <div class="design_border">
+            <img src="images/design_border.png" alt="Border Design">
+          </div>
+          <h3>Life Sciences</h3>
+          <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="grid-33 vertical-box">
+          <div class="verticalIcon">
+            <img src="images/education.png" alt="Education Icon">
+          </div>
+          <div class="design_border">
+            <img src="images/design_border.png" alt="Border Design">
+          </div>
+          <h3>Education</h3>
+          <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="grid-33 vertical-box">
+          <div class="verticalIcon">
+            <img src="images/government.png" alt="Government Icon">
+          </div>
+          <div class="design_border">
+            <img src="images/design_border.png" alt="Border Design">
+          </div>
+          <h3>Government</h3>
+          <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="clear"></div>
+        <br/>
+        <div class="grid-33 vertical-box">
+          <div class="verticalIcon">
+            <img src="images/finances.png" alt="Finances Icon">
+          </div>
+          <div class="design_border">
+            <img src="images/design_border.png" alt="Border Design">
+          </div>
+          <h3>Finances</h3>
+          <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="grid-33 vertical-box">
+          <div class="verticalIcon">
+            <img src="images/small-business.png" alt="SMB Icon">
+          </div>
+          <div class="design_border">
+            <img src="images/design_border.png" alt="Border Design">
+          </div>
+          <h3>SMB</h3>
+          <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="grid-33 vertical-box">
+          <div class="verticalIcon">
+            <img src="images/cloud.png" alt="Other Icon">
+          </div>
+          <div class="design_border">
+            <img src="images/design_border.png" alt="Border Design">
+          </div>
+          <h3>Lorem Ipsum</h3>
+          <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
       </div><!-- //.container-->
     </section>
