testimonials, updates on about us, and tagline on header

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             <li><a href="#">CONTACT</a></li>
           </ul>
         </nav>
+        <div class="headerContent">
+          <h1>Agilant Solutions</h1>
+          <h5>Accelerating Digital Transformation</h5>
+          <a href="#" class="learnMore">Learn More</a>
+        </div>
       </div><!--//.container -->
     </div><!-- /#header -->
     <!-- ******** End of Header and Nav ******** -->
@@ -51,17 +56,34 @@
           <p>Agilant Solutions Inc. is North America’s leading independent provider of IT services, solutions, and technologies. As a visionary and innovator of next generation services, Agilant builds world-class IT solutions that fit the unique requirements of customers. Representing industry leading Open Source technologies and OEMs in the industry, Agilant rides on the cutting edge of the technology wave. That is, we know technology, where it’s been, and where it’s going.</p>
         </div>
         <div class="grid-33 aboutInfo">
-          <div class="aboutIcon"><img src="images/map_icon.png" alt="Map Icon"></div>
+          <div class="aboutIconSection mapIcon">
+            <div class="aboutIcon">
+              <img src="images/map_icon.png" alt="Map Icon">
+            </div>
+            <div class="design_border">
+              <img src="images/design_border.png" alt="Border Design">
+            </div>
+          </div>
           <div class="aboutNumber">600</div>
           <div class="aboutNumberText">staff on three continents</div>
         </div>
         <div class="grid-33 aboutInfo">
-          <div class="aboutIcon"><img src="images/talking_icon.png" alt="Talking Bubbles Icon"></div>
+          <div class="aboutIconSection consultingIcon">
+            <div class="aboutIcon"><img src="images/talking_icon.png" alt="Talking Bubbles Icon"></div>
+            <div class="design_border">
+              <img src="images/design_border.png" alt="Border Design">
+            </div>
+          </div>
           <div class="aboutNumber">5,700</div>
           <div class="aboutNumberText">consulting engagements</div>
         </div>
         <div class="grid-33 aboutInfo">
-          <div class="aboutIcon"><img src="images/calendar_icon.png" alt="Calendar Icon"></div>
+          <div class="aboutIconSection calendarIcon">
+            <div class="aboutIcon"><img src="images/calendar_icon.png" alt="Calendar Icon"></div>
+            <div class="design_border">
+              <img src="images/design_border.png" alt="Border Design">
+            </div>
+          </div>
           <div class="aboutNumber">25</div>
           <div class="aboutNumberText">years in the industry</div>
         </div>
@@ -141,7 +163,7 @@
     <section class="grid-100 ourVerticals">
       <div class="grid-container">
         <div class="grid-55 suffix-45">
-          <h2>The Verticals</h2>
+          <h2>Our Focus</h2>
         </div>
         <div class="grid-33 vertical-box">
           <div class="verticalIcon">
@@ -207,24 +229,69 @@
         </div>
       </div><!-- //.container-->
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <!-- ******** Testimonials ******** -->
+    <section class="grid-100 ourTestimonials">
+      <div class="grid-container">
+        <div class="grid-55 suffix-45">
+          <h2>Testimonials</h2>
+        </div>
+        <div class="grid-33">
+          <div class="testimonial-box">
+            <div class="quotes">
+              <img src="images/blue_quotes.png" alt="Blue Left Quotes">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="test_author">
+              <span class="personName">John Smith</span>
+              <span class="personTitle">Vice President of ABC Company</span>
+            </div>
+          </div>
+        </div>
+        <div class="grid-33">
+          <div class="testimonial-box">
+            <div class="quotes">
+              <img src="images/blue_quotes.png" alt="Blue Left Quotes">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="test_author">
+              <span class="personName">John Smith</span>
+              <span class="personTitle">Vice President of ABC Company</span>
+            </div>
+          </div>
+        </div>
+        <div class="grid-33">
+          <div class="testimonial-box">
+            <div class="quotes">
+              <img src="images/blue_quotes.png" alt="Blue Left Quotes">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="test_author">
+              <span class="personName">John Smith</span>
+              <span class="personTitle">Vice President of ABC Company</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!-- //.container-->
+  </section>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
 
-    <!-- ******** END OF  ******** -->
+  <!-- ******** END OF  ******** -->
 
-    <!-- ********  ******** -->
+  <!-- ********  ******** -->
 
-    <!-- ******** END OF  ******** -->
+  <!-- ******** END OF  ******** -->
 
-  </div><!-- //#wrapper -->
-  <script src="javascripts/jquery-2.1.3.min.js"></script>
-  <script src="javascripts/grid.js"></script>
+</div><!-- //#wrapper -->
+<script src="javascripts/jquery-2.1.3.min.js"></script>
+<script src="javascripts/grid.js"></script>
 </body>
 </html>
