our partners section

--- a/index.html
+++ b/index.html
@@ -274,6 +274,67 @@
       </div>
     </div><!-- //.container-->
   </section>
+  <!-- ******** Our Partners ******** -->
+  <section class="grid-100 ourPartners">
+    <div class="grid-container">
+      <div class="grid-55 suffix-45">
+        <h2>Our Partners</h2>
+      </div>
+      <div class="grid-20 partner_logo">
+        <img src="images/partners/hp_logo.png" alt="HP Logo">
+      </div>
+      <div class="grid-20 partner_logo vmware">
+        <img src="images/partners/vmware_logo.png" alt="VMware Logo">
+      </div>
+      <div class="grid-20 partner_logo">
+        <img src="images/partners/amazon_logo.png" alt="AWS Logo">
+      </div>
+      <div class="grid-20 partner_logo">
+        <img src="images/partners/citrix_logo.png" alt="Citrix Logo">
+      </div>
+      <div class="grid-20 partner_logo microsoft">
+        <img src="images/partners/microsoft_logo.png" alt="Microsoft Logo">
+      </div>
+      <div class="clear"></div>
+      <div class="grid-20 partner_logo">
+        <img src="images/partners/aruba_logo.png" alt="Aruba Logo">
+      </div>
+      <div class="grid-20 partner_logo">
+        <img src="images/partners/symantec_logo.png" alt="Symantec Logo">
+      </div>
+      <div class="grid-20 partner_logo oracle">
+        <img src="images/partners/oracle_logo.png" alt="Oracle Logo">
+      </div>
+      <div class="grid-20 partner_logo">
+        <img src="images/partners/apple_logo.png" alt="Apple Logo">
+      </div>
+       <div class="grid-20 partner_logo">
+        <img src="images/partners/apc_logo.png" alt="APC Logo">
+      </div>
+      <div class="grid-20 partner_logo">
+        <img src="images/partners/hp_enterprise_logo.png" alt="HP Enterprise Logo">
+      </div>
+      <div class="grid-20 partner_logo">
+        <img src="images/partners/netapp_logo.png" alt="NetApp Logo">
+      </div>
+      <div class="grid-20 partner_logo lexmark">
+        <img src="images/partners/lexmark_logo.png" alt="Lexmark Logo">
+      </div>
+      <div class="grid-20 partner_logo">
+        <img src="images/partners/barracuda_logo.png" alt="Barracuda Logo">
+      </div>
+      <div class="grid-20 partner_logo">
+        <img src="images/partners/motion_logo.png" alt="Motion Logo">
+      </div>
+      <div class="clear"></div>
+      <div class="grid-20 partner_logo">
+        <img src="images/partners/emerson_logo.png" alt="Emerson Logo">
+      </div>
+      <div class="grid-20 partner_logo azure">
+        <img src="images/partners/azure_logo.png" alt="Azure Logo">
+      </div>
+    </div><!-- //.container-->
+  </section>
   <br>
   <br>
   <br>
