--- a/index.html
+++ b/index.html
@@ -335,21 +335,37 @@
       </div>
     </div><!-- //.container-->
   </section>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-
-
-  <!-- ******** END OF  ******** -->
-
-  <!-- ********  ******** -->
-
-  <!-- ******** END OF  ******** -->
+  <footer>
+    <div class="grid-container">
+      <div class="grid-40 suffix-30">
+        <span class="footer_heading">CORPORATE HEADQUARTERS</span>
+        <div class="contact_info">
+          3 Seaview Blvd, Port Washington, NY 11050 USA
+          <br/>
+          <b>Phone:</b> (212) 736-0111
+          <br/>
+          <b>Fax:</b> (212) 629-3944
+          <br/>
+          <b>Toll Free:</b> (866) 308-3920
+          <br/>
+          <b>Contact:</b> <a href="mailto:info@asisystem.com" target="">info@asisystem.com</a>
+        </div>
+      </div>
+      <div class="grid-30"></div>
+      <div class="clear"></div>
+      <br/>
+      <div class="grid-80 suffix-20">
+        <span class="footer_heading">US:</span>
+        <span class="locations_list">NEW YORK, NY | PORT WASHINGTON, NY | NEW HYDE PARK, NY | MIAMI, FL | TAMPA, FL | SOUTH GROVE, IL | MT PROSPECT, IL | LAFAYETTE, IN</span>
+        <br/>
+        <span class="footer_heading">EUROPE:</span>
+        <span class="locations_list">BUCHAREST, ROMANIA</span>
+        <br/>
+        <span class="footer_heading">ASIA:</span>
+        <span class="locations_list">DUBAI, UAE</span>
+      </div>
+    </div>
+  </footer>
 
 </div><!-- //#wrapper -->
 <script src="javascripts/jquery-2.1.3.min.js"></script>
