--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <link rel="stylesheet" href="css/component.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/mobile.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 <script src="javascripts/modernizr.custom.js"></script>
 <script src="https://use.fontawesome.com/b0c78ef928.js"></script>
 </head>
@@ -28,15 +30,15 @@
     <div id="header">
       <div class="grid-container">
         <nav class="grid-100 mobile-grid-100">
-          <div id="asi-logo" class="grid-40">
+          <div id="asi-logo" class="grid-40 mobile-grid-30">
             <a href="#"><img src="images/agilant_logo.png"></a>
           </div>
-          <ul class="grid-60">
-            <li><a href="#">ABOUT US</a></li>
-            <li><a href="#">OUR SOLUTIONS</a></li>
-            <li><a href="#">OUR PARTNERS</a></li>
-            <li><a href="#">JOIN US</a></li>
-            <li><a href="#">CONTACT</a></li>
+          <ul class="grid-60 mobile-grid-70">
+            <li class="mobile-grid-100"><a href="#">ABOUT US</a></li>
+            <li class="mobile-grid-100"><a href="#">OUR SOLUTIONS</a></li>
+            <li class="mobile-grid-100"><a href="#">OUR PARTNERS</a></li>
+            <li class="mobile-grid-100"><a href="#">JOIN US</a></li>
+            <li class="mobile-grid-100"><a href="#">CONTACT</a></li>
           </ul>
         </nav>
         <div class="headerContent">
