cleaning up the navigation bar styles

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <a href="#"><img src="images/agilant_logo.png"></a>
           </div>
           <ul class="grid-60 mobile-grid-70">
-            <li class="mobile-grid-100"><a href="#">ABOUT US</a></li>
-            <li class="mobile-grid-100"><a href="#">OUR SOLUTIONS</a></li>
-            <li class="mobile-grid-100"><a href="#">OUR PARTNERS</a></li>
-            <li class="mobile-grid-100"><a href="#">JOIN US</a></li>
-            <li class="mobile-grid-100"><a href="#">CONTACT</a></li>
+            <li class="grid-20 mobile-grid-100"><a href="#">ABOUT US</a></li>
+            <li class="grid-25 mobile-grid-100"><a href="#">OUR SOLUTIONS</a></li>
+            <li class="grid-25 mobile-grid-100"><a href="#">OUR PARTNERS</a></li>
+            <li class="grid-20 mobile-grid-100"><a href="#">JOIN US</a></li>
+            <li class="grid-10 mobile-grid-100"><a href="#">CONTACT</a></li>
           </ul>
         </nav>
         <div class="headerContent">
