--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <div id="header">
       <div class="grid-container">
         <nav class="grid-100 mobile-grid-100">
-          <div id="asi-logo" class="grid-40 mobile-grid-30">
-            <a href="#"><img src="images/agilant_logo.png"></a>
+          <div id="asi-logo" class="grid-20 mobile-grid-30">
+            <a href="index.html"><img src="images/agilant_logo.png"></a>
           </div>
-          <ul class="grid-60 mobile-grid-70">
-            <li class="grid-20 mobile-grid-100"><a href="#">ABOUT US</a></li>
+          <ul class="grid-80 mobile-grid-70">
+            <li class="grid-20 mobile-grid-100"><a href="about.html">ABOUT US</a></li>
             <li class="grid-25 mobile-grid-100"><a href="#">OUR SOLUTIONS</a></li>
             <li class="grid-25 mobile-grid-100"><a href="#">OUR PARTNERS</a></li>
             <li class="grid-15 mobile-grid-100"><a href="#">JOIN US</a></li>
@@ -169,7 +169,7 @@
         </div>
         <div class="grid-33 vertical-box">
           <div class="verticalIcon">
-            <img src="images/life-sciences.png" alt="Life Sciences Icon">
+            <img src="images/life-sciences.png" alt="Life Sciences Icon" class="lifeSciences-icon">
           </div>
           <div class="design_border">
             <img src="images/design_border.png" alt="Border Design">
@@ -179,7 +179,7 @@
         </div>
         <div class="grid-33 vertical-box">
           <div class="verticalIcon">
-            <img src="images/education.png" alt="Education Icon">
+            <img src="images/education.png" alt="Education Icon" class="education-icon">
           </div>
           <div class="design_border">
             <img src="images/design_border.png" alt="Border Design">
@@ -189,7 +189,7 @@
         </div>
         <div class="grid-33 vertical-box">
           <div class="verticalIcon">
-            <img src="images/government.png" alt="Government Icon">
+            <img src="images/government.png" alt="Government Icon" class="government-icon">
           </div>
           <div class="design_border">
             <img src="images/design_border.png" alt="Border Design">
