our solutions page

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@ rel="stylesheet">
           </div>
           <ul class="grid-80 mobile-grid-70">
             <li class="grid-20 mobile-grid-100"><a href="about.html">ABOUT US</a></li>
-            <li class="grid-25 mobile-grid-100"><a href="#">OUR SOLUTIONS</a></li>
+            <li class="grid-25 mobile-grid-100"><a href="our_solutions.html">OUR SOLUTIONS</a></li>
             <li class="grid-25 mobile-grid-100"><a href="#">OUR PARTNERS</a></li>
             <li class="grid-15 mobile-grid-100"><a href="#">JOIN US</a></li>
             <li class="grid-15 mobile-grid-100"><a href="#">CONTACT</a></li>
