--- a/index.html
+++ b/index.html
@@ -320,11 +320,11 @@ rel="stylesheet">
         <img src="images/partners/vmware_logo.png" alt="VMware Logo">
       </div>
       <!-- EMC -->
-            <div class="grid-20 partner_logo">
+      <div class="grid-20 partner_logo">
         <img src="images/partners/emc_logo.png" alt="EMC Logo">
       </div>
       <!-- Arista -->
-            <div class="grid-20 partner_logo">
+      <div class="grid-20 partner_logo">
         <img src="images/partners/arista_logo.png" alt="Arista Logo">
       </div>
       <!-- Oracle -->
@@ -377,6 +377,12 @@ rel="stylesheet">
       </div>
     </div><!-- //.container-->
   </section>
+
+  <div id="returntotop" class="homebutton">
+    <p class="carrot" alt="Click to return to top">^</p>
+  </div><!-- end of #returntotop and .homebutton -->
+
+
   <footer>
     <div class="grid-container">
       <div class="grid-40 suffix-30">
@@ -411,6 +417,7 @@ rel="stylesheet">
 
 </div><!-- //#wrapper -->
 <script src="javascripts/jquery-2.1.3.min.js"></script>
+<script src="javascripts/nav.js"></script>
 <script src="javascripts/grid.js"></script>
 </body>
 </html>
