added temp text above the fold

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ rel="stylesheet">
           </ul>
         </nav>
         <div class="headerContent">
-          <h1>Agilant Solutions</h1>
-          <h5>Accelerating Digital Transformation</h5>
-          <a href="#" class="learnMore">Learn More</a>
+          <h3>Accelerating Digital Transformation</h3>
+          <h5>Agilant is committed to delivering quality Technology Solutions and Professional <br/>Outsourcing Services that provide true business value to our clients, enabling them <br/>to achieve their desired goals and initiatives.</h5>
+          <a href="#solutions" class="learnMore">Learn More</a>
         </div>
       </div><!--//.container -->
     </div><!-- /#header -->
